<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:background="@color/dialog_btn_background_color">

    <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:id="@+id/sort_options"
            style="@style/Animation.AppCompat.Dialog" android:theme="@style/AlertDialog.AppCompat"
            android:visibility="visible">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/wilaya_opt" android:layout_weight="1"
                android:textColor="#000" android:imeActionId="0" android:text="Wilaya"
                android:textColorLink="@color/colorPrimaryDark"
                android:shadowColor="@color/default_circle_indicator_stroke_color"
                style="@style/MyRaidoButton"
                android:textColorHint="@color/dialog_btn_background_color"
                android:background="@color/dialog_btn_background_color"/>
        <RadioButton
                android:text="@string/sort_by_price_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/price_opt" android:layout_weight="1"
                android:textColor="#000" android:imeActionId="1" style="@style/MyRaidoButton"/>

        <RadioButton
                android:text="@string/sort_by_type_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/type_opt" android:layout_weight="1"
                android:textColor="#000" android:imeActionId="2" style="@style/MyRaidoButton"/>

        <RadioButton
                android:text="@string/sort_by_bedrooms_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/bedrooms_opt" android:layout_weight="1"
                android:textColor="#000" android:imeActionId="3" style="@style/MyRaidoButton"/>

    </RadioGroup>
    <CheckBox
            android:text="@string/dscCheckBoxText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/is_desc_cb"
            android:textColor="@color/dialog_text_color"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button

                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cancel_sort_btn" app:layout_constraintEnd_toStartOf="@+id/sort_btn"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/colorPrimary"
                style="@style/Widget.AppCompat.Button.Borderless"/>
        <Button
                android:text="@string/sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sort_btn" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel_sort_btn"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textColor="@color/colorPrimary"/>
    </android.support.constraint.ConstraintLayout>
</LinearLayout>