<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/cardView"
            app:contentPadding="@dimen/cardPadding" app:cardBackgroundColor="@color/cardview_light_background"
            android:layout_marginTop="@dimen/cardMargin" android:layout_marginStart="@dimen/cardMargin"
            android:layout_marginEnd="@dimen/cardMargin" android:layout_marginBottom="@dimen/cardMargin"
            android:layout_marginLeft="@dimen/cardMargin" android:layout_marginRight="@dimen/cardMargin"
            android:padding="@dimen/cardMargin">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" app:srcCompat="@drawable/villa"
                        android:id="@+id/iv_house_picture"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                        android:scaleType="fitXY"/>
                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tv_house_price"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:textSize="@dimen/priceTextSize" android:textColor="@color/priceTextColor"
                        android:background="@color/priceBackGroundColor"/>
            </android.support.constraint.ConstraintLayout>
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tvWilaya" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:textSize="@dimen/wilayaTextSize"
                        android:textColor="@color/textColorPrimary"/>
            </android.support.constraint.ConstraintLayout>
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tvAdress" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:textColor="@color/textColorSecondary"
                        android:textSize="@dimen/standardTextSize"/>
            </android.support.constraint.ConstraintLayout>
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/available"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/textView4"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        android:textColor="@color/availabulityColor"/>
                <ImageView
                        android:layout_height="@dimen/availabilityIconHeight" app:srcCompat="@drawable/car"
                        android:id="@+id/imageView" app:layout_constraintEnd_toStartOf="@+id/tvGarageNumber"
                        android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_width="@dimen/availabilityIconWidth"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tvGarageNumber"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                        android:textColor="@color/availabulityColor"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvBathroomNumber" app:layout_constraintEnd_toStartOf="@+id/imageView"
                        android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/availabulityColor"/>
                <ImageView
                        android:layout_width="@dimen/availabilityIconWidth"
                        android:layout_height="@dimen/availabilityIconHeight" app:srcCompat="@drawable/bath"
                        android:id="@+id/imageView2"
                        app:layout_constraintEnd_toStartOf="@+id/tvBathroomNumber"
                        android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvBedRooms"
                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                        android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/availabulityColor"/>
                <ImageView
                        android:layout_width="@dimen/availabilityIconWidth"
                        android:layout_height="@dimen/availabilityIconHeight" app:srcCompat="@drawable/bedroom"
                        android:id="@+id/imageView3" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/tvBedRooms"
                        android:layout_marginEnd="8dp"/>
            </android.support.constraint.ConstraintLayout>
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:text="@string/type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/textColorSecondary"
                        android:id="@+id/textView"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvType" app:layout_constraintStart_toEndOf="@+id/textView"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:textColor="@color/textColorPrimary"
                        app:layout_constraintVertical_bias="0.0"/>
            </android.support.constraint.ConstraintLayout>
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView12" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:textColor="@color/textColorSecondary"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvDate" app:layout_constraintStart_toEndOf="@+id/textView12"
                        android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/textColorPrimary"/>
            </android.support.constraint.ConstraintLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>